Add a presence widget for contacts of client. Move a few functions around to make testing easier. Refactor getPlatformUrl().

--- a/locale/en-US.properties
+++ b/locale/en-US.properties
@@ -27,6 +27,10 @@ noAvailabilityOptionsText=You have no destinations at the moment.
 availabilityOptionYES=YES
 availabilityOptionNO=NO
 availabilityUnauthorizedWarning=Sorry! You are not authorized to change your availability.
+# data/panel/html/panel.html:widget.contacts
+contactsWidgetTitle=Colleagues
+noContactsText=You don't have any colleagues.
+noContactsFoundText=No colleagues matched.
 # data/panel/html/panel.html:widget.queues
 queuesWidgetTitle=Queues
 noQueuesText=You don't have any queues
