--- a/locale/nl-NL.properties
+++ b/locale/nl-NL.properties
@@ -27,6 +27,10 @@ noAvailabilityOptionsText=Je hebt momenteel geen bestemmingen.
 availabilityOptionYES=JA
 availabilityOptionNO=NEE
 availabilityUnauthorizedWarning=Sorry! Je hebt niet de rechten om je bereikbaarheid in te stellen.
+# data/panel/html/panel.html:widget.contacts
+contactsWidgetTitle=Collega's
+noContactsText=Je hebt geen collega's.
+noContactsFoundText=Collega's niet gevonden.
 # data/panel/html/panel.html:widget.queues
 queuesWidgetTitle=Wachtrijen
 noQueuesText=Je hebt momenteel geen wachtrijen
