Add feedback when missing permissions to view/use widgets. Also added a refresh button.

--- a/locale/en-US.properties
+++ b/locale/en-US.properties
@@ -18,6 +18,7 @@ loginFormLoginButtonText=Log in
 logoutLinkText=log out
 closePanelTitle=Close
 openSettingsTitle=Settings
+refreshPanelTitle=Refresh your data
 openHelpTitle=Help
 # data/panel/html/panel.html:widget.availability
 availabilityWidgetTitle=Availability
@@ -25,9 +26,11 @@ availabilityOptionsTitle=Are you available?
 noAvailabilityOptionsText=You have no destinations at the moment.
 availabilityOptionYES=YES
 availabilityOptionNO=NO
+availabilityUnauthorizedWarning=Sorry! You are not authorized to change your availability.
 # data/panel/html/panel.html:widget.queues
 queuesWidgetTitle=Queues
 noQueuesText=You don't have any queues
+queuesUnauthorizedWarning=Sorry! You are not authorized to monitor any queues you might have.
 # lib/api.js
 unauthorizedNotificationText=In order to use Click-to-Dial, you first need to log in by clicking the toolbar icon and entering your login details.
 # lib/clicktodial.js
