--- a/locale/nl-NL.properties
+++ b/locale/nl-NL.properties
@@ -18,6 +18,7 @@ loginFormLoginButtonText=Inloggen
 logoutLinkText=uitloggen
 closePanelTitle=Sluiten
 openSettingsTitle=Instellingen
+refreshPanelTitle=Gegevens opnieuw ophalen
 openHelpTitle=Help
 # data/panel/html/panel.html:widget.availability
 availabilityWidgetTitle=Bereikbaarheid
@@ -25,9 +26,11 @@ availabilityOptionsTitle=Ben je bereikbaar?
 noAvailabilityOptionsText=Je hebt momenteel geen bestemmingen.
 availabilityOptionYES=JA
 availabilityOptionNO=NEE
+availabilityUnauthorizedWarning=Sorry! Je hebt niet de rechten om je bereikbaarheid in te stellen.
 # data/panel/html/panel.html:widget.queues
 queuesWidgetTitle=Wachtrijen
 noQueuesText=Je hebt momenteel geen wachtrijen
+queuesUnauthorizedWarning=Sorry! Je hebt niet de rechten om wachtrijen te bekijken.
 # lib/api.js
 unauthorizedNotificationText=Om gebruik te kunnen maken van klik&bel moet eerst ingelogd worden door op het icoontje op de toolbar te klikken en je gegevens in te vullen.
 # lib/clicktodial.js
