Use new api for phoneaccounts. Sort phoneacounts by description. Also call when clicking on the name/extension instead just the status icon. Cleanup lib/api.js Added popout for contacts widget. Add reconnect abilities.

--- a/locale/en-US.properties
+++ b/locale/en-US.properties
@@ -20,6 +20,7 @@ closePanelTitle=Close
 openSettingsTitle=Settings
 refreshPanelTitle=Refresh your data
 openHelpTitle=Help
+popoutTitle=Open in separate tab
 # data/panel/html/panel.html:widget.availability
 availabilityWidgetTitle=Availability
 availabilityOptionsTitle=Are you available?
@@ -31,6 +32,9 @@ availabilityUnauthorizedWarning=Sorry! You are not authorized to change your ava
 contactsWidgetTitle=Colleagues
 noContactsText=You don't have any colleagues.
 noContactsFoundText=No colleagues matched.
+contactsConnectingTitle=Waiting for presence information.
+contactsNoConnectionTitle=No presence information available right now.
+contactsUnauthorizedWarning=Sorry! You are not authorized to monitor your colleagues' presence.
 # data/panel/html/panel.html:widget.queues
 queuesWidgetTitle=Queues
 noQueuesText=You don't have any queues
