--- a/locale/nl-NL.properties
+++ b/locale/nl-NL.properties
@@ -20,6 +20,7 @@ closePanelTitle=Sluiten
 openSettingsTitle=Instellingen
 refreshPanelTitle=Gegevens opnieuw ophalen
 openHelpTitle=Help
+popoutTitle=Open in los tabblad
 # data/panel/html/panel.html:widget.availability
 availabilityWidgetTitle=Bereikbaarheid
 availabilityOptionsTitle=Ben je bereikbaar?
@@ -31,6 +32,9 @@ availabilityUnauthorizedWarning=Sorry! Je hebt niet de rechten om je bereikbaarh
 contactsWidgetTitle=Collega's
 noContactsText=Je hebt geen collega's.
 noContactsFoundText=Collega's niet gevonden.
+contactsConnectingTitle=Wacht op aanwezigheidsinformatie.
+contactsNoConnectionTitle=Aanwezigheidsinformatie niet beschikbaar op dit moment.
+contactsUnauthorizedWarning=Sorry! Je hebt niet de rechten om de beschikbaarheid van je collega's te bekijken.
 # data/panel/html/panel.html:widget.queues
 queuesWidgetTitle=Wachtrijen
 noQueuesText=Je hebt momenteel geen wachtrijen
